test/ui/tests/lowering/out-of-line-modules/missing-subfolder.stderr
error[E016]: could not load the module `nowhere-to-be-found`
 --> ${DIRECTORY}/lowering/out-of-line-modules/missing-subfolder.lushui:4:1
  |
4 | module nowhere-to-be-found
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/out-of-line-modules/missing-subfolder/nowhere-to-be-found.lushui`: No such file or directory (os error 2)

error: aborting due to previous error
 note: the error E016 has a detailed explanation
 help: run `lushui explain E016` to view it

