test/ui/tests/lowering/out-of-line-modules/missing-subfolder.lushui
;;; TEST fail check --no-core

;; famous recording
module nowhere-to-be-found

